<resources>
    <string name="app_name">KartaSvalokApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_welcome">Welcome</string>
    <string name="start_btn_sign_in">Sign In</string>
    <string name="start_name">Name</string>
    <string name="start_login">Email</string>
    <string name="start_phone_number">Phone number</string>
</resources>
